--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="bottom-container">
         <h1 class="topic">About Me</h1>
         <hr>
-        <h2>* I'm a 19-year-old Brazilian computer science student trying to learn a little bit of web dev and game dev.</h2>
-        <h2>* As you can see, I really love Undertale and Deltarune, but I'm also a big fan of <a href="./reality.html" class="signalis">Signalis</a>.</h2>
-        <h2>* I love listening to music all the time — almost as if I had a soundtrack playing throughout my day.</h2>
+        <h2 class="me">* I'm a 19-year-old Brazilian computer science student trying to learn a little bit of web dev and game dev.</h2>
+        <h2 class="me">* As you can see, I really love Undertale and Deltarune, but I'm also a big fan of <a href="./reality.html" class="signalis">Signalis</a>.</h2>
+        <h2 class="me">* I love listening to music all the time — almost as if I had a soundtrack playing throughout my day.</h2>
         <br>
         <h1 class="topic">Contact Me</h1>
         <hr>
