--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="contact">
             <img src="./assets/linkedin.png" alt="" class="icon">
-            <h2><a href="https://www.linkedin.com/in/jean-victor-yoshida-lima-90285b325" class="contact-link">Linkedin</a></h2>
+            <h2><a href="https://www.linkedin.com/in/jeanyoshida?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BK8TCsenvSG6UXPOaA%2F1NmA%3D%3D" class="contact-link">Linkedin</a></h2>
         </div>
     </div>
 </body>
